--- a/style.css
+++ b/style.css
@@ -130,3 +130,9 @@ body {
 .tilted:nth-child(even) {
   transform: rotate(-9deg); /* Alternate tilt angle */
 }
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
