--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body {
 
 #fly {
   position: relative;
-  top: 30%;
+  top: 300px;
 }
 
 @supports (-webkit-text-stroke: var(--text-outline-size) #fefbba) {
